--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "format": "prettier --write src/**/*"
   },
   "dependencies": {
+    "bootstrap": "^4.6.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.14",
